--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -69,6 +69,11 @@
             <artifactId>jjwt-jackson</artifactId>
             <version>0.12.5</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.api-client</groupId>
+            <artifactId>google-api-client</artifactId>
+            <version>2.4.1</version>
+        </dependency>
     </dependencies>
 
     <build>
